Wayland acknowledgement race
As per #20572 (closed), the race condition was fixed whereby the Wayland window configuration could be acknowledged too early: the display could attach a picture according to the older configuration, leading to position problems and glitches.
The windows size reporting is now synchronous, so that race is no longer possible (unless the vout display itself is buggy). However, there is still a potential problem where the acknowledgement is sent too late. That is to say the acknowledgement can be sent (from the window/UI thread) after the first picture according to the new configuration has already been attached.
It is unclear if this is actually the root cause for #25109, or if #25109 is a separate bug in the OpenGL code.