src/video_output/window.c
@@ -198,6 +198,20 @@ void vout_window_ReportFullscreen(vout_window_t *window, const char *id)
         window->owner.cbs->fullscreened(window, id);
 }
 
+struct vout_window_ack_data {
+    vout_window_t *window;
+    vout_window_ack_cb callback;
+    void *opaque;
+};
+
+static void vout_window_Ack(void *data)
+{
+    struct vout_window_ack_data *cb_data = data;
+
+    if (cb_data->callback != NULL)
+        cb_data->callback(cb_data->window, cb_data->opaque);
+}
+
 /* Video output display integration */
 #include <vlc_vout.h>
 #include <vlc_vout_display.h>
@@ -214,13 +228,16 @@ typedef struct vout_display_window
 } vout_display_window_t;
 
 static void vout_display_window_ResizeNotify(vout_window_t *window,
-                                             unsigned width, unsigned height)
+                                             unsigned width, unsigned height,
+                                             vout_window_ack_cb cb,
+                                             void *opaque)
 {
     vout_display_window_t *state = window->owner.sys;
     vout_thread_t *vout = state->vout;
+    struct vout_window_ack_data data = { window, cb, opaque };
 
     msg_Dbg(window, "resized to %ux%u", width, height);
-    vout_ChangeDisplaySize(vout, width, height);
+    vout_ChangeDisplaySize(vout, width, height, vout_window_Ack, &data);
 }
 
 static void vout_display_window_CloseNotify(vout_window_t *window)
